# mjai.app

./: .gitignore  Cargo.toml  README.md  pyproject.toml  verify_submission.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  cargo_test.yml  lint.yml  pytest.yml  release.yml
docker/: Dockerfile  build.sh  requirements.txt
examples/riichibot/: bot.py
examples/rulebase/: bot.py
examples/shantenbot/: bot.py  gateway.py  test_gateway.py
examples/weakml/: bot.py  model.py
python/mjai/: __init__.py  bot.py  elo.py  game.py  matching.py  player.py
python/mjai/bot/: base.py  riichibot.py  rulebase.py  tools.py
python/mjai/http_server/: server.py
python/mjaisimulator/: __init__.py  game.py  matching.py  player.py  verify.py
scripts/matching/: new_match.py
src/: lib.rs  tools.rs
src/arena/: game.rs  mod.rs  single_match.rs
src/state/: action.rs
tests/: test_elo.py  test_engine.py  test_game.py  test_game_simulator.py  test_import.py  test_matching.py  test_verify.py
tests/mjai/: test_bot.py
tests/mjai/bot/: test_base.py  test_riichibot.py  test_rulebase.py  test_tools.py
tests/players/: test_shanten_bot.py  test_tsumogiri_bot.py
tests/scenarios/: test_furiten.py  test_invalid_bot.py  test_rulebase_bot.py  test_ryukyoku.py
