[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "mjaisimulator"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "mahjong ~= 1.2.0",
    "loguru",
    "requests"
]
[project.optional-dependencies]
test = [
    "pytest ~=7.4.0",
    "flake8",
    "black",
    "isort",
    "pyright"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true